--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -2086,7 +2086,7 @@ span.post-comment span i {
 
 .nav-search {
     display: inline-block;
-    background: rgba(255, 255, 255, 0.1);
+    background: white;
     border-radius: 0;
     border-right: 1px solid rgba(255, 255, 255, 0.2);
     border-left: 1px solid rgba(255, 255, 255, 0.2);
@@ -2095,7 +2095,7 @@ span.post-comment span i {
     line-height: 50px;
     text-align: center;
     display: inline-block;
-    color: #fff;
+    color: black;
 }
 
 /* Top bar border */
@@ -2250,9 +2250,9 @@ ul.top-info-box > li.nav-search i {
 }
 
 .main-nav {
-    background: -webkit-linear-gradient(70deg, #f84270 0%, #fe803b 100%);
+    /* background: -webkit-linear-gradient(70deg, #f84270 0%, #fe803b 100%);
     background: -o-linear-gradient(70deg, #f84270 0%, #fe803b 100%);
-    background: linear-gradient(20deg, #000 0%, #000 100%);
+    background: linear-gradient(20deg, #000 0%, #000 100%); */
     min-height: 50px;
 }
 
@@ -2525,7 +2525,7 @@ ul.navbar-nav > li.mega-dropdown {
 }
 
 .nav-search a {
-    color: #fff;
+    color: black;
     display: block;
 }
 
@@ -3374,9 +3374,9 @@ ul.navbar-nav > li.mega-dropdown {
 }
 
 .newsletter-area {
-    background: -webkit-linear-gradient(70deg, #f84270 0%, #fe803b 100%);
+    /* background: -webkit-linear-gradient(70deg, #f84270 0%, #fe803b 100%);
     background: -o-linear-gradient(70deg, #f84270 0%, #fe803b 100%);
-    background: linear-gradient(20deg, #000 0%, #000 100%);
+    background: linear-gradient(20deg, #000 0%, #000 100%); */
     padding: 10px 0;
 }
 
@@ -3388,14 +3388,14 @@ ul.navbar-nav > li.mega-dropdown {
     position: absolute;
     left: 15px;
     bottom: 15px;
-    color: #fff;
+    /* color: #fff; */
     font-size: 17px;
 }
 
 .newsletter-area .newsletter-email {
     background: transparent;
     height: 48px;
-    color: #fff;
+    /* color: #fff; */
     border: none;
     width: 100%;
     padding: 0 40px;
@@ -3408,22 +3408,22 @@ ul.navbar-nav > li.mega-dropdown {
 }
 
 .newsletter-area .newsletter-email::-webkit-input-placeholder {
-    color: #fff;
+    /* color: #fff; */
     opacity: 1;
 }
 
 .newsletter-area .newsletter-email:-ms-input-placeholder {
-    color: #fff;
+    /* color: #fff; */
     opacity: 1;
 }
 
 .newsletter-area .newsletter-email::-ms-input-placeholder {
-    color: #fff;
+    /* color: #fff; */
     opacity: 1;
 }
 
 .newsletter-area .newsletter-email::placeholder {
-    color: #fff;
+    /* color: #fff; */
     opacity: 1;
 }
 
@@ -3971,7 +3971,13 @@ ul.navbar-nav > li.mega-dropdown {
     font-size: 14px;
 }
 
+.ts-social-foot li a {
+    color: black;
+}
 
+.ts-social li a {
+    color: black;
+}
 
 /* .post-kategori .post-content .subtitle{
     display: none;
